--- a/helm/stunner/values.yaml
+++ b/helm/stunner/values.yaml
@@ -16,7 +16,7 @@ stunner:
         repository: ""
         name: l7mp/stunnerd
         pullPolicy: Always
-        tag: 0.10.8
+        tag: 0.10.10
         resources:
           limits:
             cpu: 1000m
@@ -26,7 +26,7 @@ stunner:
             memory: 128Mi
 
       netdebug: 
-        enabled: false
+        enabled: true
 
 
   service:
